[package]
name = "my-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[example]]
name = "hello-redis"
path = "examples/hello-redis.rs"

[dependencies]
tokio ={ version = "1", features = ["full"]}
mini-redis = "0.4"
bytes = "1"
# dashmap = "5.5.3"