[package]
name = "tokio-io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# if you want to use #[tokio::main] macros, add the macros feature.

tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "fs", "io-std", "io-util"] }