[package]
name = "tokio-io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "echo_server_copy"
path = "src/bin/echo_server_copy.rs"

[[example]]
name = "async_read"
path = "examples/async_read.rs"

[[example]]
name = "async_read_to_end"
path = "examples/async_read_to_end.rs"

[[example]]
name = "async_write"
path = "examples/async_write.rs"

[[example]]
name = "async_write_all"
path = "examples/async_write_all.rs"

[[example]]
name = "async_io_copy"
path = "examples/async_io_copy.rs"

[dependencies]

# if you want to use #[tokio::main] macros, add the macros feature.

tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "fs", "io-std", "io-util", "net"] }